<resources>
    <string name="app_name">Ready-It</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_reddit_account">If you don\'t have reddit account, please visit www.reddit.com and register.</string>
    <string name="incorrect_credentials">Incorrect Login User Name or Password, Please check again.</string>
    <string name="error_empty_username">Enter user name</string>
    <string name="error_empty_password">Enter password</string>
    <string name="reddit_connect">Connecting Reddit.</string>
    <string name="login_success">Login Successfull</string>
    <string name="title_activity_sub_reddits">SubRedditsActivity</string>
    <string name="subreddits">SubReddits</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="done">Done</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="posts">Posts</string>
    <string name="share">Share</string>
    <string name="up_vote">Like the subreddit</string>
    <string name="down_vote">dislike subreddit</string>
    <string name="comment">Comment</string>
    <string name="title_activity_subreddit_detail">SubredditDetailActivity</string>
    <string name="my_subreddits">My Subreddits</string>
    <string name="title_activity_mine_subreddits">MineSubredditsActivity</string>
    <string name="no_subscribed_subreddit_select_and_subscribe">No subreddit is subscribed.</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="title_activity_post_reply">PostReplyActivity</string>
    <string name="write_comment">Write Reply</string>
    <string name="post_now">Post</string>
    <string name="posted_successfully">Replyposted successfully</string>
    <string name="error_occurred">An error occurred</string>
    <string name="sub_unsub_subreddit">To subscribe or unsubscribe a subreddit</string>
    <string name="unsubscribe_subreddits">UnSubscribe Subreddits!</string>
    <string name="subscribe_subreddits">Subscribe Subreddits!</string>
    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-3769391028839978/6044959098</string>
    <string name="interstitial_full_screen">ca-app-pub-3769391028839978/1203695957</string>
    <string name="error">error</string>
    <string name="state">state</string>
    <string name="code">code</string>
    <string name="user_agent_string">Sample App</string>
    <string name="basic">Basic</string>
    <string name="access_token">access_token</string>
    <string name="refresh_token">refresh_token</string>
    <string name="after">after</string>
    <string name="limit">limit</string>
    <string name="count">count</string>
    <string name="before">before</string>
    <string name="bearer">bearer</string>
    <string name="unsub">unsub</string>
    <string name="data">data</string>
    <string name="share_to">Share to</string>
    <string name="voting">voting</string>
    <string name="comments">comments</string>

</resources>
