<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/horizontal_margin">

    <TextView
        android:id="@+id/txt_subreddit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/subreddits"
        android:textColor="@color/colorBasicText" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/subscribe"
        android:textColor="@color/colorAccent"
        android:contentDescription="@string/sub_unsub_subreddit"
        android:textSize="10sp" />
</LinearLayout>