<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.project.reddit.capstone.activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/txt_reddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reddit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="bottom"
            android:paddingTop="4dp"
            android:clipToPadding="false"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:hint="@string/user_name"
                android:textColorHint="@color/colorHint"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="bottom"
            android:paddingTop="4dp"
            android:clipToPadding="false"
            app:errorEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="18dp"
            android:text="@string/dont_have_reddit_account"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


</ScrollView>
