<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/thumb_img"
                android:layout_width="100dp"
                android:layout_height="86dp"
                android:scaleType="centerCrop"
                android:transitionName="profile"
                tools:src="@mipmap/logo" />
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_view_child"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_view_child"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="84dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/share"
            android:drawableEnd="@drawable/ic_share"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/share"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_comments"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_comment"
            android:drawablePadding="8dp"
            android:text="@string/comment"
            android:contentDescription="@string/comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_up_vote"
            app:layout_constraintTop_toTopOf="@+id/tv_comments" />

        <ImageView
            android:id="@+id/image_up_vote"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/up_vote"
            android:src="@drawable/ic_arrow_upward"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vote_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_count"
            app:layout_constraintVertical_bias="0.0"
            />

        <ImageView
            android:id="@+id/image_down_vote"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/down_vote"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vote_count"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_count"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_count"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_arrow_down" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/icon_gray_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_comments" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
